updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
-      <h1>Where I'm From</h1>
-      <p>Details here...</p>
-      <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
-      <h1>What's your dream job?</h1>
-      <p>Details here...</p>
-      <h1>Where do you live?</h1>
-      <p>Details here...</p>
-      <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I am a software developer</p>
+      <h1>I am from San Antonio, Texas</h1>
+      <p>I am new to this, I just started getting into coding a couple months ago.</p>
+      <h1>Soccer,Dancing,Coffee Shops</h1>
+      <p>I honestly would love to just code in a coffee shop! lol</p>
+      <h1>Working for nike as a software developer.</h1>
+      <p>I hope to be able to pursue my dreams</p>
+      <h1>Texas</h1>
+      <p>You are in control of your dreams!</p>
+      <h1>I have always been facinasted by computers.</h1>
+      <p>Thank you for reading this!</p>
     </section>
 
     <footer id="footer">
